Moved post preview to below post, so it doesn't keep nudging the input box down every time it expands; added a link to the Markdown syntax guide; added 'Post preview' above the preview; corrected the class name applied to the post length indicator if it's too high.

--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -323,7 +323,7 @@ strong {
     margin-bottom: 0.5em;
 }
 
-.post p, .post_body pre, .post li {
+.post p, .post_body pre, .post li, #post_length_info {
     margin-bottom: 0.5em;
 }
 
